test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(type int)'
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note: candidates are: channel.writeln(inout error: err_t)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln()
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k, inout error: err_t)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k, style: iostyle)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 channel.writeln(args ...?k, style: iostyle, inout error: err_t)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln(args ...?n)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln()
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 Writer.writeln(args ...?k)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 Writer.writeln()
